@startuml class_get_game_types
title Class Diagram - GET /api/admin/game-types (Get All Game Types)

skinparam classAttributeIconSize 0

package "controller" {
    class AdminController {
        - adminService : IAdminService
        + getGameTypes() : ResponseEntity<ResponseDto<List<AdminGameTypeResponse>>>
    }
}

package "service" {
    interface IAdminService {
        + getGameTypes() : List<AdminGameTypeResponse>
    }

    class AdminServiceImpl implements IAdminService {
        - gameTypeRepository : GameTypeRepository
        - s3PresignedUrlService : S3PresignedUrlService
        + getGameTypes() : List<AdminGameTypeResponse>
        - mapGameType(gameType: GameType) : AdminGameTypeResponse
    }

    class S3PresignedUrlService {
        + generatePresignedUrl(keyOrUrl: String) : String
    }
}

package "dto.response" {
    class ResponseDto<T> {
        - status : int
        - message : String
        - data : T
        + {static} success(data: T, message: String) : ResponseDto<T>
    }

    class AdminGameTypeResponse <<record>> {
        + id : UUID
        + typeCode : GameTypeCode
        + name : String
        + shortDescription : String
        + fullDescription : String
        + howToPlay : String
        + thumbnailUrl : String
        + thumbnailPresignedUrl : String
        + iconUrl : String
        + iconPresignedUrl : String
        + features : Map<String, Object>
        + supportsCoin : boolean
        + maxLevels : int
        + isActive : boolean
        + displayOrder : int
        + mappedWasteCategories : List<WasteCategory>
    }
}

package "entity" {
    abstract class BaseEntity {
        - id : UUID
        - createdAt : LocalDateTime
        - updatedAt : LocalDateTime
    }

    class GameType extends BaseEntity {
        - typeCode : GameTypeCode
        - name : String
        - shortDescription : String
        - fullDescription : String
        - howToPlay : String
        - thumbnailUrl : String
        - iconUrl : String
        - features : Map<String, Object>
        - supportsCoin : boolean
        - maxLevels : int
        - isActive : boolean
        - isDelete : boolean
        - displayOrder : int
        - levelPresets : List<GameLevelPreset>
    }
}

package "repository" {
    interface GameTypeRepository extends JpaRepository {
        + findByIsDeleteFalse() : List<GameType>
    }
}

AdminController --> IAdminService : uses
AdminServiceImpl --> GameTypeRepository : uses
AdminServiceImpl --> S3PresignedUrlService : uses
AdminController ..> ResponseDto : returns
AdminServiceImpl ..> AdminGameTypeResponse : creates
AdminServiceImpl ..> GameType : reads

@enduml
